[PRE-DEMO] Pre-Demo Incremental changes